--- a/intern-dashboard/src/containers/App.css
+++ b/intern-dashboard/src/containers/App.css
@@ -66,10 +66,22 @@
 
 }
 
+.intern-list:hover button {
+  background: white;
+  width: 80%;
+  
+}
+
+
+
 .intern-text{
   text-align: left;
   color: black;
+  font-size: 12px;
+  margin-bottom: 2px;
+  margin-top: 2px;
 }
+
 
 
 .header {
@@ -90,6 +102,13 @@
   max-width: 20%;
   float: left;
 }
+
+button {
+  background:  #29aae0;
+  border: none;
+  
+}
+
 
 
 
