--- a/intern-dashboard/src/App.css
+++ b/intern-dashboard/src/App.css
@@ -11,15 +11,15 @@
 
 .intern-card {
   margin: 0;
-  /* position: fixed; */
+  position: fixed;
   margin-left: 400px;
   margin-top: 75px;
-  margin-bottom:100px;
+  margin-right: 30px;
   text-align: center;
   border: solid;
   padding-right: 150px;
   padding-left: 150px;
-  overflow: auto;
+  
   
 }
 
