--- a/intern-dashboard/src/App.css
+++ b/intern-dashboard/src/App.css
@@ -11,7 +11,7 @@
 
 .intern-card {
   margin: 0;
-  position: fixed;
+  position: absolute;
   margin-left: 400px;
   margin-top: 75px;
   margin-right: 30px;
@@ -19,8 +19,19 @@
   border: solid;
   padding-right: 150px;
   padding-left: 150px;
+  /* height: 50vw; */
+  overflow: auto;
+}
+
+.intern-hours {
+  float:clear;
+  position: absolute;
   
-  
+  bottom: 100;
+  width: 100%;
+  margin-top: 407px;
+  margin-left: 130px;
+
 }
 
 .intern-card h1 {
@@ -28,6 +39,7 @@
   background-image: linear-gradient(to right, red , yellow);
   
 }
+
 
 
 .intern-list {
